@@ -1,3 +1,7 @@
+2010-06-26  Stanislas Rolland  <typo3@sjbr.ca>
+
+	* Fixed bug #14876: htmlArea RTE: SelectFont plugin may cause js error
+
 2010-06-21  Stanislas Rolland  <typo3@sjbr.ca>
 
 	* Fixed bug #14799: htmlArea RTE: Color dialogue may raise a js error in IE
